Update daisy chain MLIP example reference values for new rng behavior.
Fix daisy chain MLIP example GAP evaluation (turn off OMP in GAP because
it locks up with pool autoparallelization).

--- a/docs/source/examples.daisy_chain_mlip_fitting.ipynb
+++ b/docs/source/examples.daisy_chain_mlip_fitting.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -96,7 +94,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +120,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,7 +149,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# regenerate smiles_confgis with a random seed set for testing purposes\n",
+    "# regenerate smiles_configs with a random seed set for testing purposes\n",
     "# this cell is hidden from docs. \n",
     "\n",
     "outputs = OutputSpec(\"1.ch.rdkit.xyz\", overwrite=True)\n",
@@ -202,7 +197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -270,7 +264,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,7 +292,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,7 +343,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -400,7 +391,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -501,7 +491,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -528,11 +517,14 @@
     "    num_cores = 2,\n",
     "    partitions = \"standard\")\n",
     "\n",
+    "# note - set OMP_NUM_THREADS to prevent GAP evaluation from using OpenMP, \n",
+    "# as it clashes with multiprocessing.pool, which wfl uses\n",
     "remote_info = RemoteInfo(\n",
     "    sys_name = \"github\",\n",
     "    job_name = \"gap-eval\",\n",
     "    resources = resources,\n",
     "    check_interval = 10, \n",
+    "    env_vars = [\"OMP_NUM_THREADS=1\"],\n",
     "    input_files = [\"gap.xml*\"])\n",
     "\n",
     "gap_calc_autopara_info = AutoparaInfo(\n",
@@ -549,7 +541,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -629,13 +620,13 @@
     "\n",
     "ref_errors = {\n",
     "    'atomization_energy/atom': {\n",
-    "        'train': {'RMSE': 0.01784008096943666, 'MAE': 0.014956982529185385, 'count': 50}, \n",
-    "        '_ALL_': {'RMSE': 0.01810274269833562, 'MAE': 0.015205129586306461, 'count': 100}, \n",
-    "        'test': {'RMSE': 0.018361647458989924, 'MAE': 0.015453276643427535, 'count': 50}}, \n",
+    "        'train': {'RMSE': 0.026086070005729697, 'MAE': 0.02188233965637977, 'count': 50},\n",
+    "        '_ALL_': {'RMSE': 0.02631013293566519, 'MAE': 0.02217457525203221, 'count': 100},\n",
+    "        'test': {'RMSE': 0.026532303741682858, 'MAE': 0.02246681084768465, 'count': 50}},\n",
     "    'forces/comp': {\n",
-    "        'train': {'RMSE': 0.6064186755127647, 'MAE': 0.440771517768513, 'count': 5037}, \n",
-    "        '_ALL_': {'RMSE': 0.6150461768441347, 'MAE': 0.44579797424459006, 'count': 10074}, \n",
-    "        'test': {'RMSE': 0.6235543194385854, 'MAE': 0.450824430720667, 'count': 5037}}\n",
+    "        'train': {'RMSE': 0.6700484048236104, 'MAE': 0.48912067870708253, 'count': 5097},\n",
+    "        '_ALL_': {'RMSE': 0.674843619212047, 'MAE': 0.49305958821652923, 'count': 10188},\n",
+    "        'test': {'RMSE': 0.6796105918104188, 'MAE': 0.49700313992928696, 'count': 5091}}\n",
     "}\n",
     "\n",
     "print(errors)\n",
@@ -659,7 +650,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -675,7 +666,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "793ab331f77558158f2e16fabf356357fde3f61b8f3bb6d95e9b59dbfcb88650"
